<resources>

    <!--  Nombre de la App  -->
    <string name="app_name">AdminParcialPics</string>

    <!--  Imagen  -->
    <string name="upload_image">Subiendo Imagen</string>
    <string name="moment_upload">Por Favor Espere un Momento</string>
    <string name="upload_succesful">Imagen Subida Correctamente</string>

    <!--  Materias  -->
    <string name="materia_succesful">Materia Registrada</string>
    <string name="input_error">Ingrese un Codigo</string>
    <string name="title_icono_materia">Ingresa el Codigo del Icono</string>
    <string name="hint_icono_materia">codigo icono</string>
    <string name="title_codigo_materia">Ingresa el Codigo de la Materia</string>
    <string name="hint_codigo_materia">codigo materia</string>
    <string name="title_nombre_materia">Ingresa el Nombre de la Materia</string>
    <string name="title_btn_registar">Registrar</string>

    <string-array name="listmaterias">
<!--     programacion   -->
        <item>Fundamentos de Programacion</item>
        <item>Programacion 1</item>
        <item>Programacion 2</item>
        <item>Estrucutra de Datos</item>
        <item>Analisis y diseños de S</item>
        <item>Base De Datos</item>
        <item>Gestion de BD</item>
<!--   subprogramacion     -->
        <item>Analisis y Algoritmos</item>
        <item>Ingenieria de Software</item>
        <item>Inteligencia Artificial</item>
        <item>Auditoria de Sistemas</item>
        <item>Arquitectura Empresarial</item>
<!--   calculos     -->
        <item>Calculo Diferencial</item>
        <item>Calculo Integral</item>
        <item>Calculo Vectorial</item>
        <item>Ecuaciones Diferenciales</item>
        <item>Analisis Numerico</item>
<!--    fisica    -->
        <item>Fisica Mecanica</item>
        <item>Electromagnetismo</item>
        <item>Ondas y Particulas</item>
        <item>Electronica General</item>
        <item>Circuitos Logicos</item>
<!--    continuacion de linea fisica    -->
        <item>Emprendimiento</item>
        <item>Metodologia de Investigacion</item>
        <item>Tecnicas de Investigacion</item>
        <item>Practicas en sistemas</item>
        <item>Proyectos 1</item>
        <item>Proyectos 2</item>
        <item>Etica Profesional</item>
<!--    matematicas    -->
        <item>Matematicas Discretas</item>
        <item>Algebra Lineal</item>
        <item>Probabilidad y Estaditica</item>
        <item>Investigacion de Operaciones</item>
<!--    varias    -->
        <item>Introduccion a la Ingenieria</item>
        <item>Electiva Institucional</item>
        <item>Teoria General de Comunicacion</item>
        <item>Desarrollo Nuevas Tecnologias</item>
        <item>Tendecias en Ing. Sistemas</item>
        <item>Electiva Tecnica</item>
        <item>Arquitectura de Computadores</item>
        <item>Sistemas Operativos l</item>
        <item>Redes y Computadores</item>
        <item>Administracion de Servidores</item>
        <item>Sistemas Operativos ll</item>

    </string-array>

    <string-array name="listsemestres">
        <item>Semestre 2020 - 1</item>
        <item>Semestre 2020 - 2</item>
        <item>Semestre 2021 - 1</item>
        <item>Semestre 2021 - 2</item>
        <item>Semestre 2022 - 1</item>
        <item>Semestre 2022 - 2</item>
    </string-array>

    <string-array name="listparciales">
        <item>1 Parcial</item>
        <item>2 Parcial</item>
        <item>Examen Final</item>
    </string-array>

    <!-- Home -->
    <string name="title_home">Parcial Pics</string>
    <string name="sub_title_home">Panel Administrativo</string>
    <string name="card_add_materia">Añadir Materia</string>
    <string name="card_add_parcial">Añadir Parcial</string>
    <string name="card_add_usuario">Añadir Usuario</string>
    <string name="card_add_carrera">Añadir Carrera</string>
    <string name="card_find_parcial">Consultar Parcial</string>
    <string name="card_find_usuario">Consultar Usuario</string>
    <string name="card_find_carrera">Consltar Carrera</string>

    <!--  Subir Imagenes  -->
    <string name="title_add_imagen">Subir Parciales</string>
    <string name="title_add_imagen_materia">Nombre de la Materia</string>
    <string name="title_add_imagen_semestre">Semestre del Parcial</string>
    <string name="title_add_imagen_parcial">Tipo de Parcial</string>

    <!--  Agregar Usuarios  -->
    <string name="txt_progress_title_register">Registrando Usuario</string>
    <string name="txt_toast_usuario">Registro Exitoso</string>
    <string name="txt_toast_usuario_fallido">Registro Fallido</string>
    <string name="txt_toast_usuario_consulta_fallida">Ha Ocurrido un Error Inesperado</string>
    <string name="txt_correo">Correo Electronico</string>
    <string name="txt_contrasena">Contraseña</string>
    <string name="txt_tittle_usuario">Agregar Usuario</string>

</resources>