<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:orientation="vertical"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/cerrarparcial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/typo_round_bold_demo"
            android:gravity="center"
            android:padding="15dp"
            android:drawableEnd="@drawable/cerrarp"
            android:text="@string/card_add_materia"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="25dp"
            android:background="#F44336" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:fontFamily="@font/typo_round_bold_demo"
            android:text="@string/title_icono_materia"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etxIngresarNombreIcono"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="19dp"
            android:background="@drawable/btn_materias_reg"
            android:fontFamily="@font/typo_round_bold_demo"
            android:hint="@string/hint_icono_materia"
            android:paddingStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:fontFamily="@font/typo_round_bold_demo"
            android:text="@string/title_codigo_materia"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etxIngresarCodMateria"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="19dp"
            android:background="@drawable/btn_materias_reg"
            android:fontFamily="@font/typo_round_bold_demo"
            android:hint="@string/hint_codigo_materia"
            android:paddingStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:fontFamily="@font/typo_round_bold_demo"
            android:text="@string/title_nombre_materia"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerMateriasma"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="19dp"
            android:dropDownVerticalOffset="40dp"
            android:background="@drawable/bg_spinner_semestre"/>

        <Button
            android:id="@+id/buttonShare12"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/typo_round_bold_demo"
            android:text="@string/title_btn_registar"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>