<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/txt_cerrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/cerrarp"
        android:fontFamily="@font/typo_round_bold_demo"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/txt_tittle_usuario"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="#F44336" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="9dp"
        android:fontFamily="@font/typo_round_bold_demo"
        android:text="@string/txt_correo"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/etxIngresarMail"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="19dp"
        android:layout_marginTop="5dp"
        android:dropDownVerticalOffset="40dp"
        android:background="@drawable/bg_spinner_semestre"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:fontFamily="@font/typo_round_bold_demo"
        android:text="@string/txt_contrasena"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/etxIngresarPassword"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="19dp"
        android:layout_marginTop="5dp"
        android:dropDownVerticalOffset="40dp"
        android:background="@drawable/bg_spinner_semestre"/>

    <Button
        android:id="@+id/btn_registrar_usuario"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/typo_round_bold_demo"
        android:text="@string/title_btn_registar"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>